k3s/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    metallb.io/LoadBalancerIPs: 192.168.0.204
spec:
  selector:
    app: vaultwarden
  ports:
  - name: "http"
    port: 8000
    targetPort: 80
